[package]
name = "umbr-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
gtk = "0.9"          # Ou a versão estável mais recente da série gtk3
gdk = "0.13"         # Para manipulação de superfícies, eventos, etc
gdk-pixbuf = "0.14"  # Para salvar e manipular Pixbuf (buffer de pixels)

# gtk4-layer-shell = "0.6.3"
uheex = { path = "../uheex", default-features = false }
umbr-core = { path = "../umbr-core" }

# Wayland
wayland-client = "0.31.11"
wayland-egl = "0.32.8"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }

memmap2 = "0.9"
tempfile = "3.10"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["xkbcommon"]
