[package]
name = "umbr-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
# GPU renderer and preview window
wgpu = "0.19"
winit = { version = "0.29", default-features = false, features = ["wayland", "rwh_06"] }
pollster = "0.3"
bytemuck = { version = "1.15", features = ["derive"] }

# gtk4-layer-shell = "0.6.3"
uheex = { path = "../uheex", default-features = false }
umbr-core = { path = "../umbr-core" }

# Wayland
wayland-client = "0.31.11"
wayland-egl = "0.32.8"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }

memmap2 = "0.9"
tempfile = "3.10"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["xkbcommon"]
