[package]
name = "umbr-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
uheex = { path = "../uheex", default-features = false }
umbr-core = { path = "../umbr-core" }

raw-window-handle = "0.6.2"

# Wayland
wayland-client = "0.31.11"
wayland-egl = "0.32.8"
wayland-protocols = { version = "0.32.9", features = ["client", "staging"] }

memmap2 = "0.9"
tempfile = "3.10"

[dependencies.smithay-client-toolkit]
version = "0.19.2"
default-features = false
features = ["xkbcommon"]

[dependencies.slint-interpreter]
version = "=1.12.1"
default-features = false
features = [
    "display-diagnostics",
    "renderer-femtovg",
    "std",
    "compat-1-2",
    "renderer-software",
]

[dependencies.slint]
version = "=1.12.1"
default-features = false
features = [
    "renderer-femtovg",
    "std",
    "compat-1-2",
    "renderer-software",
]

[dependencies.glutin]
version = "0.32.3"
default-features = false
features = ["wayland"]
